--- a/umutmedikal/Views/Home/Contact.cshtml
+++ b/umutmedikal/Views/Home/Contact.cshtml
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="EmreKaraman,karaman.66@hotmail.com, Full-stack developer" />
+    <meta name="abstract" content="Yozgat'ın en kaliteli medikal ürünlerinin satıldığı mağzadır" />
+    <meta name="description" content="umut,medikal,umutmedikal,Umut,Medikal,Umut Medikal,emre,emrekaraman,yozgat medikal,yozgat,emre" />
     <title>İLETİŞİM | UMUT MEDİKAL</title>
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/css/font-awesome.min.css" rel="stylesheet" />
@@ -29,7 +30,7 @@
     <script type="text/javascript">
         (function () {
             var options = {
-                whatsapp: "905465025209", // WhatsApp numarası
+                whatsapp: "905531546348", // WhatsApp numarası
                 call_to_action: "Whatsapp İletişim.", // Görüntülenecek yazı
                 position: "right", // Sağ taraf için 'right' sol taraf için 'left'
             };
@@ -125,15 +126,16 @@
             <div class="row">
                 <div class="col-sm-12">
                     <h2 class="title text-center">İletişim <strong>Tr</strong></h2>
-                    <div id="map" class="contact-map">
-                     
+                    @*<div id="map" class="contact-map">*@
+                        <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3063.9554148095995!2d34.84233521474188!3d39.8304172990131!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40807b94d5815b21%3A0x12739deb89641314!2sUmut%20Medikal!5e0!3m2!1str!2str!4v1630681446887!5m2!1str!2str" width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div>
             </div>
+        <br /><br />
             <div class="row">
                 <div class="col-sm-8">
                     <div class="contact-form">
-                        <h2 class="title text-center">Get In Touch</h2>
+                        <h2 class="title text-center">Bize Ulaşın</h2>
                         <div class="status alert alert-success" style="display: none"></div>
                         <form id="main-contact-form" class="contact-form row" name="contact-form" method="post">
                             <div class="form-group col-md-6">
@@ -251,7 +253,7 @@
     <script src="~/Scripts/js/main.js"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
     <script type="text/javascript" src="js/gmaps.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDZXuk9-42x1ljl1XFEPbtu1WCnNZp7KI&callback=initMap"></script>
     <script>
         var map;
         function initMap() {
