--- a/umutmedikal/Views/Home/Index.cshtml
+++ b/umutmedikal/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
     <script type="text/javascript">
         (function () {
             var options = {
-                whatsapp: "905465025209", // WhatsApp numarası
+                whatsapp: "905531546348", // WhatsApp numarası
                 call_to_action: "Whatsapp İletişim.", // Görüntülenecek yazı
                 position: "left", // Sağ taraf için 'right' sol taraf için 'left'
             };
@@ -71,7 +71,7 @@
                             <ul class="nav navbar-nav">
                                 <li><a href="#"><i class="fab fa-facebook"></i></a></li>
                                 <li><a href="https://www.instagram.com/umut.medikal/"><i class="fab fa-instagram"></i></a></li>
-                           
+
                             </ul>
                         </div>
                     </div>
@@ -88,10 +88,10 @@
                             <a href="index.html"><img src="~/images/home/logo.png" alt="" /></a>
 
                         </div>
-                      
+
 
                     </div>
-                   
+
                 </div>
             </div>
         </div><!--/header-middle-->
@@ -111,11 +111,12 @@
                         </div>
                         <div class="mainmenu pull-left">
                             <ul class="nav navbar-nav collapse navbar-collapse">
-                                <li><a href="index.html" class="active">Ana Sayfa</a></li>
-                                
-                             
-                                <li>@Html.ActionLink("İletişim","Contact","Home")</li>
-                               
+                                <li class="active">@Html.ActionLink("Ana Sayfa", "Index", "Home") </li>
+
+                                @*<li><a href="index.html" class="active">Ana Sayfa</a></li>*@
+
+                                <li>@Html.ActionLink("İletişim", "Contact", "Home")</li>
+
                             </ul>
                         </div>
                     </div>
@@ -151,7 +152,7 @@
                                 </div>
                                 <div class="col-sm-6">
                                     <img src="~/images/home/girl1.png" class="girl img-responsive" alt="" />
-                             
+
                                 </div>
                             </div>
                             <div class="item">
@@ -163,7 +164,7 @@
                                 </div>
                                 <div class="col-sm-6">
                                     <img src="~/images/home/girl2.jpg" class="girl img-responsive" alt="" />
-                
+
                                 </div>
                             </div>
 
@@ -176,7 +177,7 @@
                                 </div>
                                 <div class="col-sm-6">
                                     <img src="~/images/home/girl3.jpg" class="girl img-responsive" alt="" />
-                             
+
                                 </div>
                             </div>
 
@@ -200,7 +201,7 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div class="left-sidebar">
-                         @*KATEGORİ*@
+                        @*KATEGORİ*@
                         <h2>KATEGORİ</h2>
                         <div class="panel-group category-products" id="accordian">
                             <!--category-productsr-->
@@ -228,7 +229,7 @@
                             </div>
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <h4 class="panel-title"><a href="#">VARİS ÇORBI</a></h4>
+                                    <h4 class="panel-title"><a href="#">VARİS ÇORABI</a></h4>
                                 </div>
                             </div>
                             <div class="panel panel-default">
@@ -268,7 +269,7 @@
                             </div>
                         </div><!--/brands_products-->
 
-                        
+
 
                         <div class="shipping text-center">
                             <!--shipping-->
@@ -278,7 +279,7 @@
                     </div>
                 </div>
 
-                 @*ÜRÜNLERİMİZ*@
+                @*ÜRÜNLERİMİZ*@
                 <div class="col-sm-9 padding-right">
                     <div class="features_items">
                         <!--features_items-->
@@ -413,13 +414,13 @@
                     </div><!--features_items-->
 
 
-              
+
 
                 </div>
             </div>
         </div>
     </section>
-               @*FOOTER*@
+    @*FOOTER*@
     <footer id="footer">
         <!--Footer-->
         <div class="footer-top">
@@ -432,34 +433,47 @@
                         </div>
                     </div>
                     <div class="col-sm-7">
-                   
-                       
+                        <div class="col-sm-3">
+                            <div class="video-gallery text-center">
+                                <a href="#">
 
-                        
+                                    <div class="overlay-icon">
+                                        <i class="fa fa-play-circle-o"></i>
+                                    </div>
+                                </a>
+
+                            </div>
+                        </div>
+
+
+
+
+
+
                     </div>
                     <div class="col-sm-3">
                         <div class="address">
-                            <img src="~/images/home/map.png" alt="" />
-              
+                            <img src="~/images/home/girl1.png" alt="" />
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-       
+
 
         <div class="footer-bottom">
             <div class="container">
                 <div class="row">
-                    <p class="pull-left">Copyright © 2021 UMUT MEDİKAL Inc. All rights reserved.</p>
-                    <p class="pull-right">Designed by Emre Karaman <p>
+                    <p class="pull-left">Copyright © 2021 Umut Medikal Inc. All rights reserved.</p>
+                    <p class="pull-right">Designed by Emre Karaman <span></span></p>
                 </div>
             </div>
-
         </div>
 
     </footer><!--/Footer-->
+
 
     <script src="~/Scripts/js/jquery.js"></script>
     <script src="~/Scripts/js/bootstrap.min.js"></script>
